<resources>
    <string name="app_name">Abstract wallpaper</string>
    <string name="hint_dynamic_change">You can change form of uniform and dynamic graphic by 2 point touch of screen and move. Third point enables or disables changing shape.</string>
    <string name="button_dynamic_uniform">Uniform</string>
    <string name="button_dynamic_random">Dynamic</string>
    <string name="button_static_random">Static</string>
    <string name="button_particles_increase">Increase particles</string>
    <string name="button_particles_decrease">Decrease particles</string>
    <string name="button_red">Red</string>
    <string name="button_green">Green</string>
    <string name="button_blue">Blue</string>
    <string name="button_random">Random</string>
    <string name="button_install_wallpaper">Install wallpaper</string>
    <string name="button_set_change">Is change?</string>
    <string name="button_exit">Exit</string>
    <string name="message_button_red">Red version install</string>
    <string name="message_button_green">Green version install</string>
    <string name="message_button_blue">Blue version install</string>
    <string name="message_button_random">Random version install</string>
    <string name="message_button_dynamic_uniform">Dynamic uniform - change point and arguments evenly.</string>
    <string name="message_button_dynamic_random">Dynamic random - change point and arguments random.</string>
    <string name="message_button_static_random">Static random - change only points, which contains of shape.</string>
    <string name="message_button_wallpaper">Install wallpaper</string>
    <string name="message_button_set_change">Stop or start shape change. Only for uniform and random.</string>
    <string name="message_button_set_change_points">Is change:</string>
    <string name="message_button_exit">Buy-buy</string>
    <string name="message_button_install_error">Sorry! :( Can\'t install wallpaper.</string>
    <string name="message_button_particles">Particles:</string>

    <string name="acra_crush_title">Abstract wallpaper. Internal application error.</string>
    <string name="acra_crush_message_text">If you want, you can send the crash report to the developer by email.</string>
    <string name="acra_crush_message_comment">Additional information.</string>
    <string name="acra_crush_ok">Send crash report by email.</string>
</resources>
