<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ru.testsimpleapps.lifewallpaperabstract.WallpaperGLSurfaceViewActivity
        android:id="@+id/gl_surfaces_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center"
        android:text="@string/hint_dynamic_change"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal">
            <Button
                style="@style/ButtonCommon"
                android:id="@+id/button_install_static_random"
                android:layout_weight="1"
                android:text="@string/button_static_random" />
            <Button
                style="@style/ButtonCommon"
                android:id="@+id/button_install_dynamic_uniform"
                android:layout_weight="1"
                android:text="@string/button_dynamic_uniform" />
            <Button
                style="@style/ButtonCommon"
                android:id="@+id/button_install_dynamic_random"
                android:layout_weight="1"
                android:text="@string/button_dynamic_random" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal">
            <Button
                style="@style/ButtonCommon"
                android:id="@+id/button_install_red"
                android:layout_weight="1"
                android:text="@string/button_red" />
            <Button
                style="@style/ButtonCommon"
                android:id="@+id/button_install_green"
                android:layout_weight="1"
                android:text="@string/button_green" />
            <Button
                style="@style/ButtonCommon"
                android:id="@+id/button_install_blue"
                android:layout_weight="1"
                android:text="@string/button_blue" />
            <Button
                style="@style/ButtonCommon"
                android:id="@+id/button_install_random"
                android:layout_weight="1"
                android:text="@string/button_random" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal">
            <Button
                style="@style/ButtonCommon"
                android:id="@+id/button_install_wallpaper"
                android:layout_weight="1"
                android:text="@string/button_install_wallpaper" />
            <Button
                style="@style/ButtonCommon"
                android:id="@+id/button_exit"
                android:layout_weight="1"
                android:text="@string/button_exit" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>